# ChangeLog for kde-base/kdebase-startkde
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase-startkde/ChangeLog,v 1.131 2008/10/05 02:41:16 jmbsvicetto Exp $

  05 Oct 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org> Manifest:
  Fixed manifests, whitespace and PATCHES.

*kdebase-startkde-4.1.2-r1 (04 Oct 2008)

  04 Oct 2008; Marcus D. Hanwell <cryos@gentoo.org>
  files/gentoo-startkde4.patch, +kdebase-startkde-4.1.2-r1.ebuild:
  Fixed some problems in the startkde script and removed KDEDIR from it - no
  longer required.

*kdebase-startkde-3.5.10-r3 (04 Oct 2008)

  04 Oct 2008; Marcus D. Hanwell <cryos@gentoo.org>
  files/kdebase-startkde-3.5-gentoo.patch,
  +kdebase-startkde-3.5.10-r3.ebuild:
  Version bump to remove KDEDIRS and add kdeglobals as discussed in bug
  237718.

*kdebase-startkde-4.1.2 (02 Oct 2008)

  02 Oct 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +files/gentoo-startkde4.patch, +kdebase-startkde-4.1.2.ebuild:
  Added a missing patch file.

*kdebase-startkde-3.5.10-r2 (28 Sep 2008)

  28 Sep 2008; Marcus D. Hanwell <cryos@gentoo.org>
  files/kdebase-startkde-3.5-gentoo.patch,
  -kdebase-startkde-3.5.10-r1.ebuild, +kdebase-startkde-3.5.10-r2.ebuild:
  Push changes to KDEDIRS to allow third party KDE 3.5 apps to function. See
  bug 237718.

*kdebase-startkde-3.5.10-r1 (27 Sep 2008)

  27 Sep 2008; Marcus D. Hanwell <cryos@gentoo.org>
  +files/kdebase-startkde-3.5-gentoo.patch,
  +kdebase-startkde-3.5.10-r1.ebuild:
  Tweak the PATH, ROOTHPATH and XDG_DATA_DIRS variables, thanks to Matthias
  Dahl <ua_bugz_gentoo@mortal-soul.de> in bug 237718. Also tweaked KDEDIRS
  to remove /usr as this was never used.

*kdebase-startkde-3.5.10 (13 Sep 2008)

  13 Sep 2008; Carsten Lohrke <carlo@gentoo.org>
  +kdebase-startkde-3.5.10.ebuild:
  Version bump.

  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>